<?xml version="1.0"?>
<package>
  <name>handfree_hw</name>
  <version>0.1.0</version>
  <description>The handfree_hw package for hflink communication with embeded system ,ros_control frame 
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="luke_liao@126.com">luke_liao</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
